<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/question_description"
            android:text="@string/question_description"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:paddingLeft="6dp"
        android:text="@string/constraint_description"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/choicesView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@color/colorButton"
            android:contentDescription="@string/button_previous_description"
            android:text="@string/button_previous" />

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@color/colorButton"
            android:contentDescription="@string/button_next_description"
            android:text="@string/button_next" />

        <Button
            android:id="@+id/result"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorFinalButton"
            android:contentDescription="@string/button_result_description"
            android:onClick="sendMessage"
            android:text="@string/button_result"
            android:textAlignment="center"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>

